[tool.poetry]
name = "sharding-demo"
version = "0.1.0"
description = "Demo for database sharding"
authors = ["Jake Hershey <joehershey45@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7.6"
pyshard = "^0.2.3"
shard = "^0.1.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
